// https://protobuf.dev/programming-guides/proto3/

syntax = "proto3";

option java_package = "com.vaguehope.dlnatoad.rpc";
option java_outer_classname = "MediaToadProto";

package mediatoad;

message MediaNode {
  string id = 1;
  string title = 2;
  string parent_id = 3;
}

message MediaItem {
  string id = 1;
  string title = 2;
  string mime_type = 3;
  int64 file_length = 4;
  int64 duration_millis = 5;
}

message MediaTag {
  string tag = 1;
  string cls = 2;
  int64 modified = 3;
}

enum FileExistance {
  UNKNOWN = 0;
  EXISTS = 1;
  MISSING = 2;
}

message Range {
  int64 first = 1;
  int64 last = 2;  // inclusive, same and HTTP Range header.
}

service Media {
  rpc About (AboutRequest) returns (AboutReply) {}
  rpc HasMedia (HasMediaRequest) returns (HasMediaReply) {}
  rpc ReadMedia (ReadMediaRequest) returns (stream ReadMediaReply) {}
  rpc ListNode (ListNodeRequest) returns (ListNodeReply) {}
  rpc Search (SearchRequest) returns (SearchReply) {}
}

message AboutRequest {}
message AboutReply {
  // Friendly name of the TD, only used for UI and logging.
  string name = 1;
}

message HasMediaRequest {
  string id = 1;
}
message HasMediaReply {
  FileExistance existance = 1;
  MediaItem item = 2;
  repeated MediaTag tag = 3;
}

message ReadMediaRequest {
  string id = 1;
  repeated Range range = 2;
}
message ReadMediaReply {
  bytes content = 1;
  int64 total_file_length = 2;
  string mime_type = 3;
}

message ListNodeRequest {
  string node_id = 1;
}
message ListNodeReply {
  MediaNode node = 1;
  repeated MediaNode child = 2;
  repeated MediaItem item = 3;
}

message SearchRequest {
  string query = 1;
}
message SearchReply {
  repeated MediaItem result = 1;
}
